test/expected/explain_lwt.out
explain long wchar_t x
             ^
14: error: "long wchar_t" is illegal for built-in type
